SNAX icon updated

--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -132,7 +132,7 @@
 .SJCX { color: #003366; }
 .SLG { color: #5A6875; }
 .SLS { color: #1EB549; }
-.SNAX { color: #ffb700; }
+.SNAX { color: #3b2780; }
 .SNRG { color: #160363; }
 .START { color: #01AEF0; }
 .STEEM { color: #1A5099; }
