--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -1,6 +1,7 @@
 .ADA { color: #3CC8C8; }
 .ADC { color: #3CB0E5; }
 .AEON { color: #164450; }
+.ALGO { color: #000000}
 .AMP { color: #048DD2; }
 .ANC { color: #000; }
 .ARCH { color: #002652; }
