--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -16,6 +16,7 @@
 .BCY { color: #123A5A; }
 .BELA { color: #009EF9; }
 .BFT { color: #4fc3f7; }
+.BFN { color: #00004d; }
 .BLZ { color: #6BE6BE }
 .BRK { color: #194fa0; }
 .BRX { color: #a8c300; }
@@ -29,6 +30,7 @@
 .BTS { color: #03A9E0; }
 .BURST { color: #2D2D2D; }
 .CLAM { color: #D6AB31; }
+.CDA { color: #13798d; }
 .CLOAK { color: #DF3F1E; }
 .CVC { color: #3AB03E }
 .DAO { color: #FF3B3B; }
@@ -92,7 +94,10 @@
 .NAV { color: #7D59B5; }
 .MYST { color: #f5a10e; }
 .NBT { color: #FFC93D; }
+.NEC { color: #cc9900; }
+.NET { color: #cc9900; }
 .NEO { color: #58BF00; }
+.NEST { color: #cc9900; }
 .NEOS { color: #1d1d1b; }
 .NEU { color: #2983c0; }
 .NLG { color: #003E7E; }
@@ -113,6 +118,7 @@
 .POT { color: #105B2F; }
 .PPC { color: #3FA30C; }
 .PPT { color: #5a9ef6; }
+.PWC { color: #00004d; }
 .QRK { color: #22AABF; }
 .QTUM { color: #359BCE; }
 .RADS { color: #924cea; }
