--- a/webfont/cryptocoins-colors.css
+++ b/webfont/cryptocoins-colors.css
@@ -136,6 +136,7 @@
 .START { color: #01AEF0; }
 .STEEM { color: #1A5099; }
 .STRAT { color: #2398dd; }
+.STX { color: #211F6D; }
 .SWIFT { color: #428BCA; }
 .SYNC { color: #008DD2; }
 .SYS { color: #0098DA; }
